feat: ejrcicios collections y streams solucionados